// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractPropertiesFromInterfaceDeclaration should be able to extract properties from an interface that references another interface or an array of interfaces 1`] = `
Object {
  "destination": DomainObjectPropertyMetadata {
    "nullable": false,
    "of": "Address",
    "required": true,
    "type": "REFERENCE",
  },
  "id": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": false,
    "type": "NUMBER",
  },
  "items": DomainObjectPropertyMetadata {
    "nullable": false,
    "of": DomainObjectPropertyMetadata {
      "nullable": false,
      "of": "Item",
      "required": true,
      "type": "REFERENCE",
    },
    "required": true,
    "type": "ARRAY",
  },
  "status": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": true,
    "type": "STRING",
  },
  "uuid": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": false,
    "type": "STRING",
  },
}
`;

exports[`extractPropertiesFromInterfaceDeclaration should be able to extract properties from an interface with a date type 1`] = `
Object {
  "id": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": false,
    "type": "NUMBER",
  },
  "occurredAt": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": true,
    "type": "DATE",
  },
  "packageUuid": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": true,
    "type": "STRING",
  },
  "uuid": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": false,
    "type": "STRING",
  },
}
`;

exports[`extractPropertiesFromInterfaceDeclaration should be able to extract properties from an interface with all of the primitive types we support: number, string, boolean w/ required and optional combination 1`] = `
Object {
  "gateNumber": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": true,
    "type": "NUMBER",
  },
  "id": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": false,
    "type": "NUMBER",
  },
  "operational": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": true,
    "type": "BOOLEAN",
  },
  "phoneNumber": DomainObjectPropertyMetadata {
    "nullable": true,
    "required": true,
    "type": "STRING",
  },
  "uuid": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": false,
    "type": "STRING",
  },
}
`;

exports[`extractPropertiesFromInterfaceDeclaration should be able to extract properties from an interface with an array property 1`] = `
Object {
  "colors": DomainObjectPropertyMetadata {
    "nullable": false,
    "of": DomainObjectPropertyMetadata {
      "nullable": false,
      "required": true,
      "type": "STRING",
    },
    "required": true,
    "type": "ARRAY",
  },
  "description": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": true,
    "type": "STRING",
  },
  "price": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": true,
    "type": "NUMBER",
  },
  "upc": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": true,
    "type": "STRING",
  },
}
`;

exports[`extractPropertiesFromInterfaceDeclaration should be able to extract properties from an interface with an enum 1`] = `
Object {
  "amount": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": true,
    "type": "NUMBER",
  },
  "currency": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": true,
    "type": "STRING",
  },
  "externalId": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": true,
    "type": "STRING",
  },
  "status": DomainObjectPropertyMetadata {
    "nullable": false,
    "of": "PaymentStatus",
    "required": true,
    "type": "REFERENCE",
  },
}
`;

exports[`extractPropertiesFromInterfaceDeclaration should be able to extract properties from our Address interface. all strings 1`] = `
Object {
  "city": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": true,
    "type": "STRING",
  },
  "postal": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": true,
    "type": "STRING",
  },
  "state": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": true,
    "type": "STRING",
  },
  "street": DomainObjectPropertyMetadata {
    "nullable": false,
    "required": true,
    "type": "STRING",
  },
  "suite": DomainObjectPropertyMetadata {
    "nullable": true,
    "required": true,
    "type": "STRING",
  },
}
`;
